--- a/css/zombie.css
+++ b/css/zombie.css
@@ -70,3 +70,9 @@ footer p{
     padding-top: 25px;
     margin-left: 80px;
 }
+.secdiv{
+    margin-left: 300px;
+    margin-right: 300px;
+}
+    
+
